--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: page
+title: Gage Birchmeier
+subtitle: 4th year student at the University of Michigan
 ---
+
+Hello! I am Gage, and I go by they/them pronouns. I am a 4th year student at the University of Michigan College of Engineering 
+studying Computer Science. 
