--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Gage Birchmeier
 subtitle: 4th year student at the University of Michigan
 ---
 
+![Gage Birchmeier](/assets/img/gage.jpg)
+
 Hello! My name is Gage Birchmeier, I am a 4th year student at the University of Michigan College of Engineering 
 studying Computer Science expecting to graduate in December. I am interested in software engineering, algorithm design, and artificial intelligence.
 I am currently looking for a full-time software engineering position starting in January 2024.
