--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Gage Birchmeier
 subtitle: 4th year student at the University of Michigan
 ---
 
-![Gage Birchmeier](/assets/img/gage.jpg)
+![Gage Birchmeier](https://ibb.co/9V7QMGy)
 
 Hello! My name is Gage Birchmeier, I am a 4th year student at the University of Michigan College of Engineering 
 studying Computer Science expecting to graduate in December. I am interested in software engineering, algorithm design, and artificial intelligence.
