--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Gage Birchmeier
 subtitle: 4th year student at the University of Michigan
 ---
 
-<img src="https://ibb.co/9V7QMGy" alt="Gage, a college age student with glasses and medium length brown hair holds up a phone displaying the app they helped develop"/>
+<img src="https://i.ibb.co/8dH1hXP/img-4617-3.jpg" alt="Gage, a college age student with glasses and medium length brown hair holds up a phone displaying the app they helped develop" border="0">
 
 Hello! My name is Gage Birchmeier, I am a 4th year student at the University of Michigan College of Engineering 
 studying Computer Science expecting to graduate in December. I am interested in software engineering, algorithm design, and artificial intelligence.
