updates and change to interest in grad school

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@ subtitle: 4th year student at the University of Michigan
 
 <img src="https://i.ibb.co/8dH1hXP/img-4617-3.jpg" alt="Gage, a college age student with glasses and medium length brown hair holds up a phone displaying the app they helped develop" border="0">
 
-Hello! My name is Gage Birchmeier, I am a 4th year student at the University of Michigan College of Engineering 
-studying Computer Science expecting to graduate in December. I am interested in software engineering, algorithm design, and artificial intelligence.
-I am currently looking for a full-time software engineering position starting in January 2024.
+Hello! My name is Gage Birchmeier, I go by they/them/theirs pronouns. I am a 4th year student at the University of Michigan College of Engineering 
+studying Computer Science expecting to graduate in December. I am interested in programming languages, algorithm design, and artificial intelligence.
+I am currently looking to continue my Computer Science studies at the doctorate level in 2024.
+
+
+Click on the images below to learn more!
+
+[![AAHOM DEEP](https://i.ibb.co/JKmvFxB/MDP.jpg)](aboutme.md#digitally-enhanced-exhibit-program-(deep))
+
+[![Party Shooter](./assets/img/shooter2.png)](partyshooter.md)
