--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@ subtitle: 4th year student at the University of Michigan
 
 <img src="https://i.ibb.co/8dH1hXP/img-4617-3.jpg" alt="Gage, a college age student with glasses and medium length brown hair holds up a phone displaying the app they helped develop" border="0">
 
-Hello! My name is Gage Birchmeier, I go by they/them/theirs pronouns. I am a 4th year student at the University of Michigan College of Engineering 
+<p> Hello! My name is Gage Birchmeier, I go by they/them/theirs pronouns. I am a 4th year student at the University of Michigan College of Engineering 
 studying Computer Science expecting to graduate in December. I am interested in programming languages, algorithm design, and artificial intelligence.
-I am currently looking to continue my Computer Science studies at the doctorate level in 2024.
+I am currently looking to continue my Computer Science studies at the doctorate level in 2024. </p>
 
 
-Click on the images below to learn more!
+<p>Click on the images below to learn more!</p>
 
-[![AAHOM DEEP](https://i.ibb.co/JKmvFxB/MDP.jpg)](aboutme.md#digitally-enhanced-exhibit-program-(deep))
+<a href="https://gsbirch.github.io/aboutme.md#digitally-enhanced-exhibit-program-(deep)">
+    <img src="https://i.ibb.co/JKmvFxB/MDP.jpg" alt="A picture of the Michigan Digitally Enhanced Exhibit Program logo" border="0">
+</a>
 
-[![Party Shooter](./assets/img/shooter2.png)](partyshooter.md)
+<a href="https://gsbirch.github.io/partyshooter.md">
+    <img src="./assets/img/shooter2.png" alt="A picture of the Party Shooter logo" border="0">  
+</a>
