links dont work lol

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ studying Computer Science expecting to graduate in December. I am interested in 
 I am currently looking to continue my Computer Science studies at the doctorate level in 2024. </p>
 
 
-<p>Click on the images below to learn more!</p>
+<!-- <p>Click on the images below to learn more!</p>
 
 <a href="https://gsbirch.github.io/aboutme.md#digitally-enhanced-exhibit-program-(deep)">
     <img src="https://i.ibb.co/JKmvFxB/MDP.jpg" alt="A picture of the Michigan Digitally Enhanced Exhibit Program logo" border="0">
@@ -19,4 +19,4 @@ I am currently looking to continue my Computer Science studies at the doctorate 
 
 <a href="https://gsbirch.github.io/partyshooter.md">
     <img src="./assets/img/shooter2.png" alt="A picture of the Party Shooter logo" border="0">  
-</a>
+</a> -->
