grad school updates

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: page
 title: Gage Birchmeier
-subtitle: 4th year student at the University of Michigan
+subtitle: 2nd year PhD student at the University of Kentucky
 ---
 
 <img src="https://i.ibb.co/8dH1hXP/img-4617-3.jpg" alt="Gage, a college age student with glasses and medium length brown hair holds up a phone displaying the app they helped develop" border="0">
 
-<p> Hello! My name is Gage Birchmeier, I go by they/them/theirs pronouns. I am a 4th year student at the University of Michigan College of Engineering 
-studying Computer Science expecting to graduate in December. I am interested in programming languages, algorithm design, and artificial intelligence.
-I am currently looking to continue my Computer Science studies at the doctorate level in 2024. </p>
+<p> Hello! My name is Gage Birchmeier, I go by they/them/theirs pronouns. I am a 2nd year student at the University of Kentucky Graduate School 
+studying Computer Science. I received my Bachelor's Degree from the University of Michigan in December 2023. I am interested in artificial intelligence, narrative intelligence and Computer Science education.
+I am currently looking for opportunities in summer 2025!. </p>
 
 
 <!-- <p>Click on the images below to learn more!</p>
