update about me and minor fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ subtitle: 2nd year PhD student at the University of Kentucky
 
 <p> Hello! My name is Gage Birchmeier, I go by they/them/theirs pronouns. I am a 2nd year student at the University of Kentucky Graduate School 
 studying Computer Science. I am also in the Graduate Certificate in College Teaching and Learning program. I received my Bachelor's Degree from the University of Michigan in December 2023. I am interested in artificial intelligence, narrative intelligence and Computer Science education.
-I am currently looking for opportunities in Summer 2026!. </p>
+I am currently looking for opportunities in Summer 2026!</p>
 
 
 <!-- <p>Click on the images below to learn more!</p>
